--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ main {
 .welcome {
   margin-top: 65px;
   width: 100%;
-  background-image: url(/photo/IMG_2569.jpeg);
+  background-image: url(https://github.com/Ren6628/Ren-page/blob/main/IMG_2569.jpeg?raw=true);
   padding-top: 150px;
   padding-bottom: 200px;
 }
